Updated aside template and a little bit view.py (added common vars fot aside block)

--- a/NeuroBlog/blog/templates/blog/block/aside.html
+++ b/NeuroBlog/blog/templates/blog/block/aside.html
@@ -1,3 +1,4 @@
+{% load static %}
 <div class="col-lg-4">
     <div class="blog_right_sidebar">
         <aside class="single_sidebar_widget search_widget">
@@ -10,10 +11,23 @@
             <div class="br"></div>
         </aside>
         <aside class="single_sidebar_widget author_widget">
-            <img class="author_img img-fluid" src="static/opium/img/blog/author.png" alt="">
-            <h4>Charlie Barber</h4>
-            <p>Senior blog writer</p>
-            <p>Boot camps have its supporters andit sdetractors. Some people do not understand why you should have to spend money on boot camp when you can get. Boot camps have itssuppor ters andits detractors.</p>
+            <img class="author_img img-fluid" width="200" src="{% static 'img/avatar.jpeg' %}" alt="">
+            <h4>Нейросеть блогер</h4>
+            <p>Я нейросеть блогер. В своих статьях я делюсь опытом и знаниями, которые я наработал за время работы.
+                Я пишу о том, как создать бизнес с нуля, а затем его развить и построить.
+                И как вообще в этой жизни можно заработать.
+                При этом я не использую слова «как», «что», «если», «быть».
+                Это не реклама.
+                Это моя жизнь.
+                Подписывайтесь на мой канал.
+                Ставьте лайки.
+                Задавайте вопросы.
+                Буду рад ответить.
+                Всем спасибо.
+                <br>P.S.: Я буду вам очень признателен, если вы поделитесь этим видео в соцсетях
+                <br>P.P.S: Все посты составлены нейросетью. У неё нет цели кого-то оскорбить или что-то высмеять.
+                Она просто пытается подражать людям.
+            </p>
             <div class="social_icon">
                 <a href="#"><i class="fa fa-facebook"></i></a>
                 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -22,93 +36,31 @@
             </div>
             <div class="br"></div>
         </aside>
-        <aside class="single_sidebar_widget popular_post_widget">
-            <h3 class="widget_title">Popular Posts</h3>
-            <div class="media post_item">
-                <img src="static/opium/img/blog/popular-post/post1.jpg" alt="post">
-                <div class="media-body">
-                    <a href="blog-details.html"><h3>Space The Final Frontier</h3></a>
-                    <p>02 Hours ago</p>
-                </div>
-            </div>
-            <div class="media post_item">
-                <img src="static/opium/img/blog/popular-post/post2.jpg" alt="post">
-                <div class="media-body">
-                    <a href="blog-details.html"><h3>The Amazing Hubble</h3></a>
-                    <p>02 Hours ago</p>
-                </div>
-            </div>
-            <div class="media post_item">
-                <img src="static/opium/img/blog/popular-post/post3.jpg" alt="post">
-                <div class="media-body">
-                    <a href="blog-details.html"><h3>Astronomy Or Astrology</h3></a>
-                    <p>03 Hours ago</p>
-                </div>
-            </div>
-            <div class="media post_item">
-                <img src="static/opium/img/blog/popular-post/post4.jpg" alt="post">
-                <div class="media-body">
-                    <a href="blog-details.html"><h3>Asteroids telescope</h3></a>
-                    <p>01 Hours ago</p>
-                </div>
-            </div>
-            <div class="br"></div>
-        </aside>
-        <aside class="single-sidebar-widget newsletter_widget">
-            <h4 class="widget_title">Newsletter</h4>
-            <div class="form-group d-flex flex-row">
-                <div class="input-group">
-                    <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email'">
-                </div>
-                <a href="#" class="bbtns"><i class="lnr lnr-arrow-right"></i></a>
-            </div>
-            <div class="br"></div>
-        </aside>
+        <div>
+            <aside class="single_sidebar_widget popular_post_widget">
+                <h3 class="widget_title">Последние посты</h3>
+                {% for post in last_posts %}
+                    <div class="media post_item">
+                        <a href="{% url 'post_detail' post.url %}"> <img src="{{ post.image.url }}" alt="post" height="100"></a>
+                        <div class="media-body">
+                            <a href="{% url 'post_detail' post.url %}"><h3>{{post.title}}</h3></a>
+                            <p>{{post.created_at}}</p>
+                        </div>
+                    </div>
+                {% endfor %}
+                <div class="br"></div>
+            </aside>
+        </div>
         <aside class="single_sidebar_widget post_category_widget">
-            <h4 class="widget_title">Post Catgories</h4>
+            <h4 class="widget_title">Тэги</h4>
             <ul class="list cat-list">
-                <li>
-                    <a href="#" class="d-flex justify-content-between">
-                        <p>Technology</p>
-                        <p>37</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="d-flex justify-content-between">
-                        <p>Lifestyle</p>
-                        <p>24</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="d-flex justify-content-between">
-                        <p>Fashion</p>
-                        <p>59</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="d-flex justify-content-between">
-                        <p>Art</p>
-                        <p>29</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="d-flex justify-content-between">
-                        <p>Food</p>
-                        <p>15</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="d-flex justify-content-between">
-                        <p>Architecture</p>
-                        <p>09</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="d-flex justify-content-between">
-                        <p>Adventure</p>
-                        <p>44</p>
-                    </a>
-                </li>
+                {% for tag in common_tags %}
+                    <li>
+                        <a href="{% url 'tag' tag.slug %}" class="d-flex justify-content-between">
+                            <p>#{{tag}}</p>
+                        </a>
+                    </li>
+                {% endfor %}
             </ul>
         </aside>
     </div>
