--- a/NeuroBlog/blog/templates/blog/base.html
+++ b/NeuroBlog/blog/templates/blog/base.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="icon" href="static/opium/img/favicon.png" type="image/png">
+    <link rel="icon" href="{% static 'img/favicon-32x32.png' %}" type="image/png">
 
     <link rel="stylesheet" href="{% static '/css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static '/vendors/linericon/style.css' %}">
