--- a/NeuroBlog/blog/templates/blog/block/aside.html
+++ b/NeuroBlog/blog/templates/blog/block/aside.html
@@ -3,11 +3,11 @@
     <div class="blog_right_sidebar">
         <aside class="single_sidebar_widget search_widget">
             <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search Posts">
-                <span class="input-group-btn">
-                    <button class="btn btn-default" type="button"><i class="lnr lnr-magnifier"></i></button>
-                </span>
-            </div><!-- /input-group -->
+                <form action="{% url 'search_results' %}" method="get" class="my-2 my-lg-0">
+                    <input name="q" type="text" class="form-control" placeholder="Поиск" aria-label="Поиск">
+                    <button class="btn btn-default" type="submit"><i class="lnr lnr-magnifier"></i></button>
+                </form>
+            </div>
             <div class="br"></div>
         </aside>
         <aside class="single_sidebar_widget author_widget">
@@ -28,12 +28,12 @@
                 <br>P.P.S: Все посты составлены нейросетью. У неё нет цели кого-то оскорбить или что-то высмеять.
                 Она просто пытается подражать людям.
             </p>
-            <div class="social_icon">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-github"></i></a>
-                <a href="#"><i class="fa fa-behance"></i></a>
-            </div>
+<!--            <div class="social_icon">-->
+<!--                <a href="#"><i class="fa fa-facebook"></i></a>-->
+<!--                <a href="#"><i class="fa fa-twitter"></i></a>-->
+<!--                <a href="#"><i class="fa fa-github"></i></a>-->
+<!--                <a href="#"><i class="fa fa-behance"></i></a>-->
+<!--            </div>-->
             <div class="br"></div>
         </aside>
         <div>
