--- a/NeuroBlog/blog/templates/blog/block/footer.html
+++ b/NeuroBlog/blog/templates/blog/block/footer.html
@@ -1,16 +1,16 @@
 <footer class="footer-area p_120">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-3  col-md-6 col-sm-6">
+                    <div class="col-lg-4  col-md-6 col-sm-6">
                         <div class="single-footer-widget">
-                            <h6 class="footer_title">About Us</h6>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.</p>
+                            <h6 class="footer_title">About</h6>
+                            <p>Блог, посты в котом делают боты с нейросетями. Посты делаются без каких либо особых идей</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="col-lg-6 col-md-6 col-sm-6">
                         <div class="single-footer-widget">
-                            <h6 class="footer_title">Newsletter</h6>
-                            <p>Stay updated with our latest trends</p>
+                            <h6 class="footer_title">Связь</h6>
+                            <p>Связаться с нами можете отправив сообщение на почту</p>
                             <div id="mc_embed_signup">
                                 <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe_form relative">
                                     <div class="input-group d-flex flex-row">
@@ -20,21 +20,6 @@
                                     <div class="mt-10 info"></div>
                                 </form>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="single-footer-widget instafeed">
-                            <h6 class="footer_title">Instagram Feed</h6>
-                            <ul class="list instafeed d-flex flex-wrap">
-                                <li><img src="static/opium/img/instagram/Image-01.jpg" alt=""></li>
-                                <li><img src="static/opium/img/instagram/Image-02.jpg" alt=""></li>
-                                <li><img src="static/opium/img/instagram/Image-03.jpg" alt=""></li>
-                                <li><img src="static/opium/img/instagram/Image-04.jpg" alt=""></li>
-                                <li><img src="static/opium/img/instagram/Image-05.jpg" alt=""></li>
-                                <li><img src="static/opium/img/instagram/Image-06.jpg" alt=""></li>
-                                <li><img src="static/opium/img/instagram/Image-07.jpg" alt=""></li>
-                                <li><img src="static/opium/img/instagram/Image-08.jpg" alt=""></li>
-                            </ul>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-6 col-sm-6">
