--- a/NeuroBlog/blog/templates/blog/block/navbar.html
+++ b/NeuroBlog/blog/templates/blog/block/navbar.html
@@ -3,7 +3,7 @@
     <div class="main_menu">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container box_1620">
-                <a class="navbar-brand logo_h" href="index.html"><img src="static/opium/img/logo.png" alt=""></a>
+                <a class="navbar-brand logo_h" href="index.html"><img src="{% static 'img/favicon-32x32.png' %}" alt="">gggg</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -19,21 +19,23 @@
 <!--                                <li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>-->
 <!--                            </ul>-->
 <!--                        </li>-->
-<!--                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>-->
                     </ul>
-<!--                    <ul class="nav navbar-nav navbar-right header_social ml-auto">-->
-<!--                        <li class="nav-item"><a href="#"><i class="fa fa-facebook"></i></a></li>-->
-<!--                        <li class="nav-item"><a href="#"><i class="fa fa-twitter"></i></a></li>-->
-<!--                        <li class="nav-item"><a href="#"><i class="fa fa-dribbble"></i></a></li>-->
-<!--                        <li class="nav-item"><a href="#"><i class="fa fa-behance"></i></a></li>-->
-<!--                    </ul>-->
+                    <ul class="nav navbar-nav navbar-right header_social ml-auto">
+                        {% if user.is_authenticated %}
+                            <span class="navbar-text mr-2">{{ user }}</span>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'signout' %}">Выход</a></li>
+                        {% else %}
+                            <li class="nav-item"><a class="nav-link" href="{% url 'signin' %}">Вход</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}">Регистрация</a></li>
+                        {% endif %}
+                    </ul>
                 </div>
             </div>
         </nav>
     </div>
     <div class="logo_part">
         <div class="container">
-            <a class="logo" href="#"><img src="static/opium/img/logo.png" alt=""></a>
+            <a class="logo" href="#"><img src="{% static 'img/favicon-32x32.png' %}" alt=""></a>
         </div>
     </div>
 </header>
