--- a/NeuroBlog/blog/templates/blog/search.html
+++ b/NeuroBlog/blog/templates/blog/search.html
@@ -3,10 +3,41 @@
 {% block title %}Поиск{% endblock %}
 
 {% block header %}
-    {% include './block/search_form.html' %}
+<!--<div class="container-fluid home-slider">-->
+<!--    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">-->
+<!--        <div class="carousel-inner">-->
+<!--            <div class="carousel-item active" style="background-color: #343a40!important">-->
+<!--                <div class="carousel-caption d-none d-md-block">-->
+<!--                    <form action="{% url 'search_results' %}" class="my-2 my-lg-0">-->
+<!--                        <input name="q" type="text" class="form-control" placeholder="Поиск" aria-label="Поиск">-->
+<!--                        <button class="btn btn-default" type="submit"><i class="lnr lnr-magnifier"></i></button>-->
+<!--                    </form>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+
 {% endblock %}
 
 {% block content %}
+
+<div class="container-fluid home-slider">
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active" style="background-color: #343a40!important">
+                <div class="carousel-caption d-none d-md-block">
+                    <form action="{% url 'search_results' %}" class="my-2 my-lg-0">
+                        <input name="q" type="text" class="form-control" placeholder="Поиск" aria-label="Поиск">
+                        <button class="btn btn-default" type="submit"><i class="lnr lnr-magnifier"></i></button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
@@ -18,9 +49,14 @@
             </nav>
             <p class="lead">Найдено записей: {{ count }}</p>
             {% for result in results %}
-                <a href="{% url 'post_detail' slug=result.url %}"><h2>{{ result.title }}</h2></a>
-                <p>{{ result.description|safe }}</p>
-                <hr>
+                <div class="media post_item">
+                    <div class="media-body">
+                        <a href="{% url 'post_detail' slug=result.url %}"><h2>{{ result.title }}</h2></a>
+                        <a href="{% url 'post_detail' result.url %}"> <img src="{{ result.image.url }}" alt="post" height="100"></a>
+                        <p>{{ result.description|safe }}</p>
+                        <hr>
+                    </div>
+                </div>
             {% endfor %}
         </div>
     </div>
