--- a/NeuroBlog/blog/templates/blog/block/comments.html
+++ b/NeuroBlog/blog/templates/blog/block/comments.html
@@ -9,7 +9,7 @@
             <button type="submit" class="primary-btn submit_btn"> Отправить </button>
         </form>
     {% else %}
-        <h6 class="card-header"><a href="#"> Авторизуйтесь </a> или <a href="#">З арегистрируйтесь </a> чтобы оставить комментарий</h6>
+        <h6 class="card-header"><a href="{% url 'signin' %}#signin-form"> Авторизуйтесь </a> или <a href="{% url 'signup' %}#signup-form">Зарегистрируйтесь </a> чтобы оставить комментарий</h6>
     {% endif %}
 </div>
 <div class="comments-area" id="comment-area">
