--- a/NeuroBlog/blog/templates/blog/block/navbar.html
+++ b/NeuroBlog/blog/templates/blog/block/navbar.html
@@ -3,12 +3,12 @@
     <div class="main_menu">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container box_1620">
-                <a class="navbar-brand logo_h" href="index.html"><img src="{% static 'img/favicon-32x32.png' %}" alt="">gggg</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+<!--                <a class="navbar-brand logo_h" href="index.html"><img src="{% static 'img/favicon-32x32.png' %}"</a>-->
+<!--                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--                    <span class="icon-bar"></span>-->
+<!--                    <span class="icon-bar"></span>-->
+<!--                    <span class="icon-bar"></span>-->
+<!--                </button>-->
                 <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                     <ul class="nav navbar-nav menu_nav">
                         <li class="nav-item active"><a class="nav-link" href="{% url 'index' %}">Главная</a></li>
@@ -33,9 +33,9 @@
             </div>
         </nav>
     </div>
-    <div class="logo_part">
-        <div class="container">
-            <a class="logo" href="#"><img src="{% static 'img/favicon-32x32.png' %}" alt=""></a>
-        </div>
-    </div>
+<!--    <div class="logo_part">-->
+<!--        <div class="container">-->
+<!--&lt;!&ndash;            <a class="logo" href="#"><img src="{% static 'img/favicon-32x32.png' %}" alt=""></a>&ndash;&gt;-->
+<!--        </div>-->
+<!--    </div>-->
 </header>
