--- a/NeuroBlog/blog/templates/blog/signin.html
+++ b/NeuroBlog/blog/templates/blog/signin.html
@@ -16,9 +16,9 @@
             margin-top: -100px;
             background: hsla(0, 0%, 100%, 0.8);
             backdrop-filter: blur(30px);
-            ">
+            "
+            id="signin-form">
         <div class="card-body py-5 px-md-5">
-
           <div class="row d-flex justify-content-center">
             <div class="col-lg-8">
               <h2 class="fw-bold mb-5">Вход</h2>
