--- a/NeuroBlog/blog/templates/blog/signup.html
+++ b/NeuroBlog/blog/templates/blog/signup.html
@@ -17,9 +17,8 @@
         margin-top: -100px;
         background: hsla(0, 0%, 100%, 0.8);
         backdrop-filter: blur(30px);
-        ">
+        " id="signup-form">
     <div class="card-body py-5 px-md-5">
-
       <div class="row d-flex justify-content-center">
         <div class="col-lg-8">
           <h2 class="fw-bold mb-5">Зарегистрироваться</h2>
